--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,18 @@
             <artifactId>spring-data-elasticsearch</artifactId>
             <version>3.2.6.RELEASE</version>
         </dependency>
+
+        <!-- quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
