--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,20 @@ spring:
 #      cluster-nodes: http://106.14.47.110:9200
       repositories:
         enabled: true
+  redis:
+    open: false  # 是否开启redis缓存  true开启   false关闭
+    database: 0   # Redis数据库索引（默认为0）
+    host: localhost  # Redis服务器地址
+    port: 6379  # Redis服务器连接端口
+    password:   # Redis服务器连接密码（默认为空）
+#    password: cq247  # Redis服务器连接密码（默认为空）
+    timeout: 6000  # 连接超时时间（毫秒）
+    jedis:
+      pool:
+        max-active: 200  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1  # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10  # 连接池中的最大空闲连接
+        min-idle: 0  # 连接池中的最小空闲连接
 
 
 user:
